# yier

./: .gitignore  AGENTS.md  README.md  VSCodeExtensionSocketPairAnalyze.md  main.py  pyproject.toml
examples/: demo.py
tests/: test_app.py  test_attachments.py  test_codex_backend.py  test_codex_background_runner.py  test_codex_ipc.py  test_codex_ipc_manager.py  test_codex_pairing.py  test_codex_pairing_mcp.py  test_codex_pairing_proxy.py  test_codex_sdk_client.py  test_codex_workspace.py  test_main.py  test_paired_editor_bridge.py  test_shutdown_signals.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.vue  main.ts  style.css
web/src/__tests__/: App.spec.ts  ChatTimeline.spec.ts  CodexSessionExplorer.spec.ts
web/src/codex/: types.ts
web/src/components/: ChatComposer.vue  (+13 more)
yier_web/: __init__.py  app.py  attachments.py  auth.py  background_followups.py  channel_workspace.py  chat.py  cli.py  codex_ipc.py  codex_pairing.py  codex_pairing_mcp.py  codex_pairing_proxy.py  codex_workspace.py  config.py  directory_picker.py  event_stream.py  frontend.py  paired_editor_bridge.py  schemas.py  session_conversation_state_store.py  session_metadata_store.py  session_ui_store.py  streaming_tools.py  tool_events.py
yier_web/agent_backends/: __init__.py  base.py  codex_backend.py  yier_backend.py
yier_web/codex/: README.md  README.zh-CN.md  __init__.py  backend.py  background.py  background_runner.py  collaboration_mode.py  ipc_manager.py  runtime.py  session_events.py  ws_commands.py
yier_web/routes/: __init__.py  codex.py  core.py
(+96 files in other folders)
