[project]
name = "yier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "granian[reload]>=2.7.2",
    "httpx>=0.28.1",
    "litestar>=2.21.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "yier-channel",
    "yier-agents>=0.1.3",
]

[tool.uv.workspace]
members = ["packages/yier-channel"]

[tool.uv.sources]
yier-channel = { workspace = true }
