[project]
name = "yier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codex-ipc>=0.1.0",
    "granian[reload]>=2.7.2",
    "httpx>=0.28.1",
    "litestar>=2.21.1",
    "pydantic>=2.12.5",
    "yier-channel",
    "yier-agents>=0.1.3",
]

[project.scripts]
yier-dev = "yier_web.cli:dev"
yier-dev-backend = "yier_web.cli:dev_backend"
yier-dev-web = "yier_web.cli:dev_web"
yier-prod = "yier_web.cli:prod"
yier-build-web = "yier_web.cli:build_web"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yier_web*"]

[tool.uv.workspace]
members = ["packages/yier-channel"]

[tool.uv.sources]
codex-ipc = { path = "../codex-ipc", editable = true }
yier-channel = { workspace = true }

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.10"]
